[gd_scene load_steps=6 format=3 uid="uid://ig122l0kw28w"]

[ext_resource type="Texture2D" uid="uid://ddvmqdsdenlpk" path="res://Assets/Sprites/background.jpg" id="1_2l0kq"]
[ext_resource type="Script" path="res://Assets/Scripts/main.gd" id="1_l4yir"]
[ext_resource type="PackedScene" uid="uid://cty2fymi1xifx" path="res://Scenes/player.tscn" id="3_esgna"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h5jf7"]
bg_color = Color(0.482537, 0.700311, 0.510432, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uybri"]
bg_color = Color(3.70607e-06, 0.764052, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_l4yir")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(639.5, 359.5)
scale = Vector2(2.05591, 2.00829)
texture = ExtResource("1_2l0kq")

[node name="Player" parent="." instance=ExtResource("3_esgna")]

[node name="MeteorSpawner" type="Timer" parent="."]
autostart = true

[node name="MeteorStrongSpawner" type="Timer" parent="."]

[node name="HumanSpawner" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="MeatSpawner" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/background = SubResource("StyleBoxFlat_h5jf7")
theme_override_styles/fill = SubResource("StyleBoxFlat_uybri")

[node name="TimerLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 10.0
offset_right = 20.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1

[node name="PhaseComplete" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60

[node name="PauseButton" type="Button" parent="UI"]
process_mode = 3
offset_left = 1241.0
offset_top = 70.0
offset_right = 1267.0
offset_bottom = 101.0
text = "||"

[connection signal="timeout" from="MeteorSpawner" to="." method="_on_meteor_spawner_timeout"]
[connection signal="timeout" from="MeteorStrongSpawner" to="." method="_on_meteor_strong_spawner_timeout"]
[connection signal="timeout" from="HumanSpawner" to="." method="_on_human_spawner_timeout"]
[connection signal="timeout" from="MeatSpawner" to="." method="_on_meat_spawner_timeout"]
[connection signal="pressed" from="UI/PauseButton" to="." method="_on_pause_button_pressed"]
